2003/12/10 22:08 (+0100) kaffeetisch

	R t/GnomeClientReal
	A examples/session-management.pl
	* MANIFEST: Completely revamp the "real world" GnomeClient test
	case and move it to the examples directory.

	* xs/GnomeClient.xs: Remove a FIXME comment.

	* TODO: Update to reflect presence: GnomeClient, GnomeIconLookup
	and libvte are bound and the GNOME stock icons work.

2003/12/10 02:02 (+0100) kaffeetisch

	A t/GnomeConfig.t
	A xs/GnomeConfig.xs
	* MANIFEST: Implement and test GnomeConfig.

2003/12/10 00:54 (+0100) kaffeetisch

	A xs/GnomeWindowIcon.xs
	* t/Gnome.t
	* MANIFEST: Implement and test GnomeWindowIcon.

	* t/GnomeIconSelection.t: Add /usr/share/pixmaps to the search
	path as recent libgnomeui's don't seem to do it anymore.

2003/12/09 15:41 (-0500) muppetman

	* Makefile.PL: a little bit churn on the pkg-config names, so we can
	get info on and create version guard macros for libgnome and whatever
	else.

	* xs/GnomeHelp.xs, xs/GnomeURL.xs: the _with_env functions didn't
	exist until libgnome 2.2.1; use version guards to avoid missing
	symbols.

2003/12/04 19:02 (+0100) kaffeetisch

	* gnome2perl.h
	* t/GnomeHelp
	* t/GnomeURL
	* xs/GnomeHelp.xs
	* xs/GnomeURL.xs: Implement and test
	Gnome2::Help::display_desktop_with_env and
	Gnome2::URL::show_with_env.

2003/12/02 20:40 (+0100) kaffeetisch

	* gnome.typemap: Use T_GPERL_GENERIC_WRAPPER for GnomeUIInfo's.

	* gnome.typemap
	* t/GnomeIconList.t
	* xs/GnomeIconList.xs: Create and register a custom GFlags type so
	we can use the cool flags magician in Gnome2::IconList::new.

	* xs/GnomeIconTextItem.xs
	* xs/GnomePasswordDialog.xs: Add license boilerplate.

	* xs/GnomeHelp.xs
	* xs/GnomeURL.xs: Add FIXME comments.

2003/11/30 14:48 (+0100) kaffeetisch

	A xs/GnomeIconTextItem.xs
	* t/GnomeIconList.t
	* MANIFEST: Initial implementation and test for GnomeIconTextItem.

	* xs/GnomeIconLookup.xs: Fix critical bug in
	Gnome2::IconTheme::lookup that caused a segfault.
